Switched from jQuery to q.js
q.js ran approximately twice as fast as jQuery and is only 5.22KB, vs
260.63KB

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 	<dl class="table"></dl>
 </main>
 <!--modules-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/q.min.js"></script>
 <script src="js/mr.freeze.js"></script>
 <!--main-->
 <script src="js/index.js"></script>
