--- a/client/index.html
+++ b/client/index.html
@@ -27,4 +27,5 @@
 <script src="js/input.js"></script>
 <script src="js/logic.js"></script>
 <script src="js/output.js"></script>
+<script src="js/output.req.js"></script>
 <script>window.onload=output.init;</script>
