--- a/client/index.html
+++ b/client/index.html
@@ -23,9 +23,9 @@
 <script src="js/q.min.js"></script>
 <script src="js/mr.freeze.js"></script>
 <!--main-->
-<script src="js/index.js"></script>
-<script src="js/input.js"></script>
-<script src="js/logic.js"></script>
-<script src="js/output.js"></script>
+<script src="js/c-index.js"></script>
+<script src="js/c-input.js"></script>
+<script src="js/c-logic.js"></script>
+<script src="js/c-output.js"></script>
 <script src="js/output.req.js"></script>
 <script>window.onload=output.init;</script>
