Added Styling for Modals and Main-Content
Added more generalized CSS rules for elements that take up the entire
screen (.modals) and content that takes all screen space minus the
header(.main).

--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,16 @@
 		</span>
 		<datalist id="autocomplete"></datalist>
 	</header>
-	<dl class="table"></dl>
+	<dl class="main table"></dl>
 </main>
+<section class="modal">
+	<header class="row">
+		<h1>Help</h1>
+		<button>close</button>
+	</header>
+	<ul class="main">
+	</ul>
+</section>
 <!--modules-->
 <script src="js/q.min.js"></script>
 <script src="js/mr.freeze.js"></script>
