Help Menu Hidden by Default
Added a hidden attribute to the help modal

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 	</header>
 	<dl class="main table"></dl>
 </main>
-<section class="modal">
+<section class="modal" hidden>
 	<header class="row">
 		<h1>Help</h1>
 		<button>close</button>
