Added Modal Hiding Code
Added code to output the listeners to close buttons and the code to hide
the parent modal of the close button when clicked.

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 <section class="modal" hidden>
 	<header class="row">
 		<h1>Help</h1>
-		<button>close</button>
+		<button class="close">close</button>
 	</header>
 	<ul class="main">
 	</ul>
