Added Floating Action Button to Show Help Menu
Added styling, event handlers, and DOM to create the button.

--- a/client/index.html
+++ b/client/index.html
@@ -18,13 +18,16 @@
 		<datalist id="autocomplete"></datalist>
 	</header>
 	<dl class="main table"></dl>
+	<button class="floating-action open-modal" data-modal="help" title="show instructions">?</button>
 </main>
-<section class="modal" hidden>
+<section class="help modal" hidden>
 	<header class="row">
 		<h1>Help</h1>
 		<button class="close">close</button>
 	</header>
 	<ul class="main">
+		<li>Type a search query into the appropriate field to retrieve relevant results.</li>
+		<li>Click the button with the dash beside the input fields to sort results by that column's values.</li>
 	</ul>
 </section>
 <!--modules-->
