--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
 	</ul>
 </section>
 <!--modules-->
-<script src="js/q.min.js"></script>
+<script src="js/q.min.es4.js"></script>
 <script src="js/mr.freeze.js"></script>
 <!--main-->
 <script src="js/c-index.js"></script>
