Added Fetch Polyfill
added a fetch polyfill for iOS support

--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
 </section>
 <!--modules-->
 <script src="js/q.min.es4.js"></script>
+<script src="js/fetch-polyfill.js"></script>
 <script src="js/mr.freeze.js"></script>
 <!--main-->
 <script src="js/c-index.js"></script>
