--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="icon" href="icon.png">
 <link rel="apple-touch-icon" href="icon.png">
+<link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/index.css">
 <style class="search"></style>
 <main>
