tweaked banner layout
changed dom & css for banner layout

--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,12 @@
 <link rel="apple-touch-icon" href="icon.png">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="css/button.css">
 <style class="search"></style>
 <main>
 	<aside class="banner">
-		<button class="close">close</button>
-		<ul class="main">
+		<button class="close">X</button>
+		<ul>
 			<li>Type a search query into the appropriate field to retrieve relevant results.</li>
 			<li>Click the button with the dash beside the input fields to sort results by that column's values.</li>
 		</ul>
