removed unecessary code
removed "window."

--- a/client/index.html
+++ b/client/index.html
@@ -38,4 +38,4 @@
 <script src="js/c-logic.js"></script>
 <script src="js/c-output.js"></script>
 <script src="js/output.req.js"></script>
-<script>window.onload=output.init;</script>
+<script>onload=output.init;</script>
