--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,12 @@
 <style class="search"></style>
 <main>
 	<aside class="banner">
-		<button class="close">X</button>
-		<ul>
+		<img class="logo" src="img/logo.png">
+		<ul class="banner__desc">
 			<li>Type a search query into the appropriate field to retrieve relevant results.</li>
 			<li>Click the button with the dash beside the input fields to sort results by that column's values.</li>
 		</ul>
+		<button class="close">X</button>
 	</aside>
 	<header class="row">
 		<span class="col">
