--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
 <meta theme-color="#eee">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="icon" href="icon.png">
-<link rel="apple-touch-icon" href="icon.png">
+<link rel="icon" href="icon.png?v=2">
+<link rel="apple-touch-icon" href="icon.png?v=2">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/button.css">
