--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
 		<datalist id="autocomplete"></datalist>
 	</header>
 	<dl class="main table"></dl>
+	<footer>Built by: VisionWebSoft.</footer>
 </main>
 <!--modules-->
 <script src="js/q.min.es4.js"></script>
