added login form
added login form and relavant styling

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,19 @@
 	<dl class="main table"></dl>
 	<footer>Built by: VisionWebSoft.</footer>
 </main>
+<aside class="login modal">
+	<form>
+		<label>
+			<span>Account</span>
+			<input type="text">
+		</label>
+		<label>
+			<span>Password</span>
+			<input type="password">
+		</label>
+		<button>Login</button>
+	</form>
+</aside>
 <!--modules-->
 <script src="js/q.min.es4.js"></script>
 <script src="js/fetch-polyfill.js"></script>
