added client-side login functions
Added event listeners to login form.

--- a/client/index.html
+++ b/client/index.html
@@ -32,14 +32,14 @@
 <aside class="login modal">
 	<form>
 		<label>
-			<span>Account</span>
-			<input type="text">
+			<span>User</span>
+			<input class="user" type="text">
 		</label>
 		<label>
 			<span>Password</span>
-			<input type="password">
+			<input class="password" type="password">
 		</label>
-		<button>Login</button>
+		<button class="login__btn">Login</button>
 	</form>
 </aside>
 <!--modules-->
