--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 	<dl class="main table"></dl>
 	<footer>Built by: VisionWebSoft.</footer>
 </main>
-<aside class="login modal">
+<aside class="login modal" hidden>
 	<form>
 		<label>
 			<span>User</span>
