--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,9 @@
 	<dl class="main table"></dl>
 	<footer>Built by: VisionWebSoft.</footer>
 </main>
-<aside class="login modal" hidden>
+<aside class="login modal">
 	<form>
+		<label class="login__msg"></label>
 		<label>
 			<span>User</span>
 			<input class="user" type="text">
