removed/refactored comments
Removed unecessary comments and moved important ones to the end of the
line.

--- a/client/index _new.html
+++ b/client/index _new.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Login page </title>
-<!-- ================================================= -->
-<!--				 STYLESHEET						-->
-<!-- ================================================= -->
-<!-- Bootstrap Core -->
+<title>Login page</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- Roboto Font -->
-<link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300,500" rel="stylesheet" type="text/css">
-<!-- Admin Core -->
-<link href="css/nifty.min.css" rel="stylesheet">
-<!--Page load progress bar -->
-<script src="js/pace.min.js"></script>
+<link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300,500" rel="stylesheet">
+<link href="css/nifty.min.css" rel="stylesheet"><!-- Admin Core -->
+<script src="js/pace.min.js"></script><!--Page load progress bar -->
 <div id="container" class="cls-container">
-	<!-- BACKGROUND IMAGE -->
-	<!--===================================================-->
 	<div class="bg-img img-balloon" id="bg-overlay" style="background-image: url(&quot;img/bg-img/bg-img-2.jpg&quot;);"></div>
-	<!-- HEADER -->
-	<!--===================================================-->
 	<div class="cls-header cls-header-lg">
 		<div class="cls-brand">
 			<a class="box-inline" href="javascript:">
-				<img alt="" src="img/logov2.png" class="brand-icon"> 
-<!--					<span class="brand-title">MCEMA <span class="text-thin"></span></span>-->
+				<img alt="MCEMA Logo" src="img/logov2.png" class="brand-icon"> 
 			</a>
 		</div>
 	</div>
-	<!-- LOGIN FORM -->
-	<!--===================================================-->
-	<div class="cls-content">
+	<div class="cls-content login-form"><!--added class .login-form!!-->
 		<div class="cls-content-sm panel">
 			<div class="panel-body">
 				<p class="pad-btm">Sign In to your account</p>
@@ -38,8 +24,6 @@
 						<button data-dismiss="alert" class="close"><span>×</span></button>
 						<strong>Oh snap!</strong> Please enter correct username or password.
 					</div>
-
-
 					<div class="alert alert-info fade in">
 						<button data-dismiss="alert" class="close"><span>×</span></button>
 						<strong>Logout!</strong> To continue please login here..
@@ -67,24 +51,8 @@
 			</div>
 		</div>
 	</div>
-	<!--===================================================-->
-	<!-- END OF LOGIN FORM -->
 </div>
-<!--===================================================-->
-<!-- END OF CONTAINER -->
-<!--===================================================-->
-<!--				 JAVASCRIPT						-->
-<!--===================================================-->
-<!-- MAIN PLUGIN -->
-<!-- ================================================= -->
-<!-- jQuery Version 2.1.1 -->
 <script src="js/jquery-2.1.1.min.js"></script>
-<!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
-<!-- ================================================= -->
-<!-- ADMIN PLUGIN & DEMO -->
-<!-- ================================================= -->
-<!-- Admin Core -->
-<script src="js/nifty.min.js"></script>
-<!-- Demo JavaScript -->
-<script src="js/demo/bg-images.js"></script>
+<script src="js/nifty.min.js"></script><!-- Admin Core -->
+<script src="js/demo/bg-images.js"></script><!-- Demo JavaScript -->
