--- a/client/login.html
+++ b/client/login.html
@@ -18,13 +18,9 @@
 	<div class="cls-content">
 		<form class="cls-content-sm panel panel-body">
 			<p class="pad-btm">Sign In to your account</p>
-			<div class="alert alert-danger fade in">
+			<div class="alert alert-danger">
 				<button data-dismiss="alert" class="close"><span>×</span></button>
-				<strong>Oh snap!</strong> Please enter correct username or password.
-			</div>
-			<div class="alert alert-info fade in">
-				<button data-dismiss="alert" class="close"><span>×</span></button>
-				<strong>Logout!</strong> To continue please login here..
+				<b>Oh snap!</b> Please enter correct username or password.
 			</div>
 			<div class="form-group">
 				<div class="input-group">
