removed some external files
Removed files that did not seem to impact the page.

--- a/client/login.html
+++ b/client/login.html
@@ -4,8 +4,7 @@
 <title>Login page</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,700,300,500">
-<link rel="stylesheet" href="css/nifty.min.css"><!-- Admin Core -->
-<script src="js/pace.min.js"></script><!--Page load progress bar -->
+<link rel="stylesheet" href="css/nifty.min.css">
 <aside id="container" class="cls-container">
 	<div class="bg-img img-balloon" id="bg-overlay"></div>
 	<header class="cls-header cls-header-lg">
@@ -42,5 +41,4 @@
 </aside>
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/nifty.min.js"></script><!-- Admin Core -->
-<script src="js/demo/bg-images.js"></script><!-- Demo JavaScript -->
+<script src="js/nifty.min.js"></script>
