addded contact email message
Added a message with a contact link to allow users to report problems
they encounter.

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 		<ul class="banner__desc">
 			<li>Type a search query into the appropriate field to retrieve relevant results.</li>
 			<li>Click the button with the dash beside the input fields to sort results by that column's values.</li>
+			<li>Please contact <a href="mailto:arhq@visionwebsoft.com">arhq@visionwebsoft.com</a> if you experience any issues with the app.</li>
 		</ul>
 		<button class="close">X</button>
 	</aside>
